check dev branch

--- a/sections/maze-header.liquid
+++ b/sections/maze-header.liquid
@@ -30,11 +30,11 @@
                 </div>
               </div>
             </div>
-            <div class="menu-content {{ section.settings.menu_align }}">
+            {%- comment -%} <div class="menu-content {{ section.settings.menu_align }}">
                 <div class="menu-list-x">
                   {% render 'maze-header-menu', section %}
                 </div>
-            </div>
+            </div> {%- endcomment -%}
         </div>
     </div>
 </div>
