--- a/sections/maze-header.liquid
+++ b/sections/maze-header.liquid
@@ -13,12 +13,14 @@
                   <div class="mh2-c-menu">
                     <ul class="mh2-c-menu-ul">
                       <li class="mh2-c-menu-li">Contact</li>
-                      <li class="mh2-c-menu-li">Gift-card</li>
+                      <li class="mh2-c-menu-li">Gift Cards</li>
                       <li class="mh2-c-menu-li">Shipping & Return</li>
+                      <li class="mh2-c-menu-li">Login</li>
+                      <li class="mh2-c-menu-li">Cart icon</li>
                     </ul>
                   </div>
                   <div class="mh2-ct-logo">
-                    <h1>Logo Center</h1>
+                    <h1>SHOP LOGO</h1>
                   </div>
                   <div class="mh2-ct-search">
                     <div class="mh2-dp-search">
