--- a/assets/maze-header.css
+++ b/assets/maze-header.css
@@ -15,7 +15,6 @@
 
 .menu-container {
   width: 100%;
-  background-color: beige;
   height: var(--nav-x-height);
   max-height: var(--nav-x-height);
   position: relative;
@@ -30,6 +29,7 @@
 
 .menu-content {
   display: grid;
+  background-color: #333;
 }
 
 .logo-left-x {
@@ -291,7 +291,7 @@
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
-  color: black;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -392,7 +392,7 @@
 }
 
 .mh2-c-menu-li {
-  font-size: 16px;
+  font-size: 15px;
 }
 
 .mh2-search-icon {
