update price range slider

--- a/snippets/price-range.liquid
+++ b/snippets/price-range.liquid
@@ -36,6 +36,8 @@
     }
 
     console.log(`Span: ${slide1} - ${slide2}`);
+    document.getElementById("Filter-Price-GTE").value = slide1
+    document.getElementById("Filter-Price-LTE").value = slide2
   }
 
   addEventListener('DOMContentLoaded', (event) => {
